Wed May 25 23:48:44 CST 2011   Christopher Martin  <belles@internode.on.net>

	* reloc.c (relocELFOutput): Removed an excess armword() operation that
	would inappropriately undo the byte-sex conversion of a preceding
	armword() operation.
	* reloc.c (relocELFOutput): Corrected misuse of 'offset' and 'used' fields
	in Symbol struct which was causing relocations in ELF object files to have
	messed up symbol table entries.
	* symbol.h: Edited comments to better reflect how 'offset' and 'used'
	fields in Symbol struct are used for relating symbols to symbol table
	entries.
	* variables.c (c_lcl): Ensure that a copied (sub)string is terminated.
	Bug found when comments in macros messed up assembly.

Wed Apr 13 01:45:58 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/misc.s: Add MSR/MRS APSR tests.
	* m_cpuctrl.c (getpsr): Support APSR; Give legacy warning on non
	csxf format usage; Give warning on immediate value usage to update
	status and/or extension fields.

Fri Apr  1 01:50:52 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/variable_substitution.s: Add check on empty
	string variable expansion.
	* input.c (inputVarSub): Add return value indicating additional
	environment expansion or not.
	(inputArgSub): Follow inputVarSub API change.

Wed Mar 30 01:38:58 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/environment_variable.s: Improve test.
	* regression/tests_pass/environment_variable2.s: Likewise.

Wed Mar 30 01:27:33 CEST 2011  John-Mark Bell  <jmb@netsurf-browser.org>
			       John Tytgat  <John.Tytgat@aaug.net>

	* input.c (inputArgSub): Re-expand variable contents.
	* regression/tests_pass/environment_variable.s: Ensure we do not do
	environment variable expansion inside strings.
	* regression/tests_pass/environment_variable2.s: Make sure we do
	environment variable expansion after string variable expansion.

Mon Mar 28 01:58:51 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>
