@@ -318,6 +318,7 @@ DefineInt (int size, bool allowUnaligned, const char *mnemonic)
 
 /**
  * Implements DCB and = (8 bit integer).
+ * "Define Constant Byte"
  */
 bool
 c_dcb (void)
@@ -327,6 +328,7 @@ c_dcb (void)
 
 /**
  * Implements DCW, DCWU (16 bit integer).
+ * "Define Constant Word"
  */
 bool
 c_dcw (void)
@@ -339,6 +341,7 @@ c_dcw (void)
 
 /**
  * Implements DCD, DCDU and & (32 bit integer).
+ * "Define Constant Double-word"
  */
 bool
 c_dcd (void)
@@ -351,6 +354,7 @@ c_dcd (void)
 
 /**
  * Implements DCI.
+ * "Define Constant Instruction"
  */
 bool
 c_dci (void)
@@ -437,6 +441,7 @@ DefineReal (int size, bool allowUnaligned, const char *mnemonic)
 
 /**
  * Implements DCFS / DCFSU (IEEE Single Precision).
+ * "Define Constant Float-single precision"
  */
 bool
 c_dcfs (void)
@@ -449,6 +454,7 @@ c_dcfs (void)
 
 /**
  * Implements DCFD / DCFDU (IEEE Double Precision).
+ * "Define Constant Float-double precision"
  */
 bool
 c_dcfd (void)
